# anpr

./: .gitignore  2a_Entrega_ANPR.ipynb  Entrega_Final.ipynb  README.md  dataset.ipynb  detection_classifiers.ipynb  filters_test.ipynb  interpolation_test.ipynb  main.ipynb  pyproject.toml  requirements.txt  wavelet_detector.ipynb
.github/workflows/: point-release.yaml  pull-request-test.yaml
anpr/binarization/: adaptative_gaussian.py  adaptative_mean.py  kittler.py  otsu.py  simple.py
anpr/core/: __init__.py  binarizer.py  feature_extractor.py  image_processor.py  ocr.py  plate_detector.py  resizer.py
anpr/core/decorators/: __init__.py  assertions.py
anpr/datasets/: __init__.py  open_alpr.py
anpr/detection/: edge_detector.py  estimator_detector.py  wavelet_detector.py
anpr/features/: __init__.py  aggregator.py  color.py  safe_nan.py  shape.py  texture.py
anpr/generic/: brightness.py  canny.py  contrast.py  difference_of_gaussians.py  filter_bilateral.py  filter_gaussian.py  filter_mean.py  filter_median.py  filter_nlm.py  grayscale.py  histogram_normalization.py  laplacian.py  morphological_closing.py  morphological_opening.py  negative.py  prewitt.py  sobel.py  wavelet_transform.py
anpr/interpolation/: bicubic.py  bilinear.py  lanczos.py  nearest.py
anpr/ocr/: easy_ocr.py
bibliographic-review/: README.md
experiments/: binarization_test.ipynb  dataset.ipynb  edge_detector.ipynb  histogram_test.ipynb  ocr_test.ipynb  wavelet_detector.ipynb
