[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anpr"
version = "0.0.0"
readme = "README.md"
description = "ANPR é uma biblioteca simples para detecção automática de placas veiculares."

keywords = ["anpr"]
requires-python = ">=3.11"

classifiers = [
    "Development Status :: Stable",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "opencv-contrib-python~=4.8.0.74",
    "numpy~=1.25.2",
    "matplotlib==3.7.2",
    "gdown==4.7.1",
    "easyocr==1.7.0",
    "plotly==5.16.0",
    "Pillow==9.5.0"
]

[tool.setuptools.packages.find]
where = ["anpr"]

[project.urls]
repository = "https://github.com/moesio-f/py-abm"
